syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "PayloadSignServiceProto";

package jp.co.soramitsu.payloadsignservice;

service PayloadSignService {
    rpc CreateAccount (CreateAccountRequest) returns (google.protobuf.Empty);
}

message CreateAccountRequest {
    string account_name = 1 ;
    string domain_id = 2;
    bytes main_pubkey = 3;
}
